<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/coffeeshop2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="#ffffff"
                android:textSize="45sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="20dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/price"
                android:textColor="#ffffff"
                android:textSize="35sp" />

            <EditText
                android:id="@+id/Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:textColorHint="#ffffff"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:inputType="textMultiLine"
                app:backgroundTint="#ffffff"/>

            <TextView
                android:id="@+id/topping"
                style="@style/subHeadings"
                android:text="@string/toppings"/>

            <CheckBox
                android:id="@+id/cream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="#ffffff"
                android:text="@string/whippedCream"
                android:textColor="#ffffff"
                android:textSize="20dp" />
            <CheckBox
                android:id="@+id/chocolate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:buttonTint="#ffffff"
                android:text="@string/chocolate"
                android:textColor="#ffffff"
                android:textSize="20dp" />


            <TextView
                style="@style/subHeadings"
                android:id="@+id/text1"
                android:text="@string/quantity"
                android:textAllCaps="true"
                android:textColor="#ffffff" />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/plus_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:onClick="increment"
                    android:text="+"
                    android:textSize="25dp"
                    style="?android:attr/borderlessButtonStyle" />

                <TextView
                    android:id="@+id/quantity_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="16dp"
                    android:layout_toRightOf="@id/plus_button"
                    android:text="0"
                    android:textColor="#ffffff"
                    android:textSize="30sp"
                    />

                <Button
                    android:id="@+id/minus_button"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_toRightOf="@id/quantity_text_view"
                    android:onClick="decrement"
                    android:text="-"
                    android:textSize="25dp"
                    style="?android:attr/borderlessButtonStyle"/>

            </RelativeLayout>

            <TextView
                android:id="@+id/text2"
                android:text="@string/bill"
                android:textAllCaps="true"
                style="@style/subHeadings" />

            <TextView
                android:id="@+id/bill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text1"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-black"
                android:text="$0"
                android:textColor="#ffffff"
                android:textSize="20sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/quantity_text_view"
                android:onClick="submitOrder"
                android:text="Order"
                android:textColor="#000000" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>